apps/online-shop-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop-frontend
  namespace: online-shop-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-shop-frontend
  template:
    metadata:
      labels:
        app: online-shop-frontend
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: online-shop-frontend
          image: harbor.api-api-api.com/online-shop/frontend:main-43-9603db6013888a55d6866bb60e5956e1248cff73
          ports:
            - containerPort: 80
