apps/online-shop-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-frontend
  namespace: online-shop-frontend
spec:
  selector:
    app: online-shop-frontend
  ports:
    - port: 80
      targetPort: 80
