apps/online-shop-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-frontend
  namespace: online-shop-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: online-shop.api-api-api.com
    external-dns.alpha.kubernetes.io/target: a6aaa50f-2590-4179-84f2-d0f18bce0587.cfargotunnel.com
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - online-shop.api-api-api.com
      secretName: online-shop-frontend-tls
  rules:
    - host: online-shop.api-api-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: online-shop-frontend
                port:
                  number: 80
